kubernetes/apps/portfolio-previews/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio-previews
  labels:
    pod-security.kubernetes.io/enforce: restricted
